--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Challenge\n",
+    "The sinking of the Titanic is one of the most infamous shipwrecks in history.\n",
+    "\n",
+    "On April 15, 1912, during her maiden voyage, the widely considered “unsinkable” RMS Titanic sank after colliding with an iceberg. Unfortunately, there weren’t enough lifeboats for everyone onboard, resulting in the death of 1502 out of 2224 passengers and crew.\n",
+    "\n",
+    "While there was some element of luck involved in surviving, it seems some groups of people were more likely to survive than others.\n",
+    "\n",
+    "` In this challenge, we ask you to build a predictive model that answers the question: “what sorts of people were more likely to survive?” using passenger data (ie name, age, gender, socio-economic class, etc). `"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing lib."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +29,24 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset Description\n",
+    "\n",
+    "#### Overview\n",
+    "The data has been split into two groups:\n",
+    "\n",
+    "- training set (train.csv)\n",
+    "- test set (test.csv)\n",
+    "The training set should be used to build your machine learning models. For the training set, we provide the outcome (also known as the “ground truth”) for each passenger. Your model will be based on “features” like passengers’ gender and class. You can also use feature engineering to create new features.\n",
+    "\n",
+    "The test set should be used to see how well your model performs on unseen data. For the test set, we do not provide the ground truth for each passenger. It is your job to predict these outcomes. For each passenger in the test set, use the model you trained to predict whether or not they survived the sinking of the Titanic.\n",
+    "\n",
+    "We also include gender_submission.csv, a set of predictions that assume all and only female passengers survive, as an example of what a submission file should look like."
    ]
   },
   {
@@ -215,59 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.sum of      PassengerId  Survived  Pclass  \\\n",
-       "0              1         0       3   \n",
-       "1              2         1       1   \n",
-       "2              3         1       3   \n",
-       "3              4         1       1   \n",
-       "4              5         0       3   \n",
-       "..           ...       ...     ...   \n",
-       "886          887         0       2   \n",
-       "887          888         1       1   \n",
-       "888          889         0       3   \n",
-       "889          890         1       1   \n",
-       "890          891         0       3   \n",
-       "\n",
-       "                                                  Name     Sex   Age  SibSp  \\\n",
-       "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                             Allen, Mr. William Henry    male  35.0      0   \n",
-       "..                                                 ...     ...   ...    ...   \n",
-       "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
-       "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
-       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
-       "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
-       "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
-       "\n",
-       "     Parch            Ticket     Fare Cabin Embarked  \n",
-       "0        0         A/5 21171   7.2500   NaN        S  \n",
-       "1        0          PC 17599  71.2833   C85        C  \n",
-       "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3        0            113803  53.1000  C123        S  \n",
-       "4        0            373450   8.0500   NaN        S  \n",
-       "..     ...               ...      ...   ...      ...  \n",
-       "886      0            211536  13.0000   NaN        S  \n",
-       "887      0            112053  30.0000   B42        S  \n",
-       "888      2        W./C. 6607  23.4500   NaN        S  \n",
-       "889      0            111369  30.0000  C148        C  \n",
-       "890      0            370376   7.7500   NaN        Q  \n",
-       "\n",
-       "[891 rows x 12 columns]>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
